v3.8.2
 - Fixed update and install script dependency issues
 - Update and install scripts now delete themselves on completion
 - Tweaked the way both run slightly

v3.8.1
 - Added remote plex server support
 - Added plexToken setting
 - Added remotePlex setting
 - Added remotePlexIP setting
 - Added remotePlexPort setting
 - Added localPlex setting
 - Changed plex update settings to be based off remotePlex and localPlex being true
 - Changed plexSection default to 0
 - Added prompt for some settings inscript
 - Updated update.js for new settings
 - Added beta option in update.js

v3.7.1
 - Some small tweaks
 - Colour fixes

v3.7.0
 - Note: For info on new settings go to the github wiki
 - Added check and fix for invalid partial.json error.
 - Fixed Update.js for properly keeping settings from older versions and for updating from versions where settings dont exist
 - Added some more colours
 - Added page count when "maxPages" is larger than 1
 - Fixed episode naming for plex sorting with dashes
 - Changed default floatplaneServer to use Edge02-na.floatplaneclub.com vs Edge01-na.floatplaneclub.com (Seems to perform better)
 - Added "floatplaneServer" setting
 - Added "formatWithDate" setting
 - Fixed a issue with creating missing directories
 - Added ability to sort episodes by Year or Month in plex as a fake season. Read updated plex guide for info
 - Added "yearsAsSeasons" setting
 - Added "monthsAsSeasons" setting
 - Added ability to have the script auto repeat every x seconds, minutes, hours, days or weeks
 - Added "repeatScript" setting
 - Fixed bug with reusing session data introduced in v3.1.0, Should remove the need to use forceLogin now
 - Updated Update.js for new settings
 - Added "plexSection" setting
 - Added "plexScannerInstall" setting
 - Integrated plex library updates into the script, see settings wiki for more info
 - Commented all new code
 - Fixed BitWit title naming having incorrect dashes
 - Added Redundancy to Update.bat and Install.bat

v3.6.2